force-app/main/default/objects/Lead_Route_Read_Snapshot__c/Lead_Route_Read_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Loop2 Read snapshot - captures lead state before routing</description>
    <label>Lead Route Read Snapshot</label>
    <nameField>
        <label>Lead Route Read Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Route Read Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>