force-app/main/default/objects/Lead_Route_Read_Snapshot__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>4</scale>
</CustomField>