force-app/main/default/objects/Lead_Route_Read_Snapshot__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <type>Lookup</type>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Route Read Snapshots</relationshipLabel>
    <relationshipName>Route_Read_Snapshots</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>