force-app/main/default/objects/Lead_Route_Read_Snapshot__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Text</type>
    <length>50</length>
</CustomField>