force-app/main/default/objects/Lead_Route_Read_Snapshot__c/fields/Snapshot_Id__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Id__c</fullName>
    <label>Snapshot ID</label>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
</CustomField>