force-app/main/default/objects/Lead_Route_Read_Snapshot__c/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <label>State Code</label>
    <type>Text</type>
    <length>2</length>
</CustomField>