force-app/main/default/objects/Lead_Route_Read_Snapshot__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>created</fullName><default>false</default></value>
            <value><fullName>error</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>